# google-books-words

./: .gitignore  README.md
src/: google-books-words.py  pyproject.toml  source-data-paths.txt
